# Chain-AskData

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: README.md  __init__.py  main.py  memory_cli.py
eval/: README.md  _run_stdout.txt  _run_stdout_after_fix.txt  eval_questions_v1.md  eval_result_20260710_after_fix.json  eval_result_after_caliber_polish.json  eval_result_after_semantic_repair.json  eval_result_after_step2_gold46.json  eval_result_v1_extra_after_step2.json  golden_eval_set.json  golden_eval_set_p0_v1.json  golden_eval_set_v1_extra.json  memory_followup_eval.json  metric_asset_eval.json  prompt_eval_after_sample10.json  prompt_eval_before_sample10.json  run_eval.py  run_memory_eval.py  run_schema_retrieval_eval.py  schema_retrieval_eval.json  schema_retrieval_eval_result.json  schema_retrieval_eval_result_after_closure.json
static/: app.js  styles.css
templates/: index.html
tests/: test_answer_modes.py  test_api.py  test_askdata_style_main_chain.py  test_chroma_knowledge.py  test_config.py  test_core6_verification.py  test_execution_layer.py  test_feedback_loop.py  test_feishu_base_logger.py  test_feishu_cards.py  test_feishu_intent.py  test_feishu_memory.py  test_field_schema_retrieval.py  test_generated_knowledge_chunks.py  test_hybrid_retriever.py  test_intent_router.py  test_llm_query_plan_cot.py  test_llm_sql.py  test_primary_knowledge_import.py  test_query_pipeline.py  test_query_plan_cot.py  test_query_plan_cot_validator.py  test_query_planner_with_retrieval.py  test_regression_demo_queries.py  test_schema_graph.py  (+9 more)
(+141 files in other folders)
