[project]
name = "chain-askdata"
version = "0.2.0"
description = "新氧连锁经管自然语言取数 MVP"
requires-python = ">=3.14"
dependencies = [
  "chromadb",
  "fastapi",
  "openpyxl",
  "pyodps",
  "pytest",
  "python-docx",
  "python-dotenv",
  "lark-channel-sdk",
  "uvicorn",
]

[tool.pyright]
include = ["app", "tests"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
